# complainceRiskAnalyzer

./: .gitignore  HOW_IT_WORKS.md  README.md  WORKFLOW.md  app.py  diagram.html  pyproject.toml  view_diagram.html  visualize_graph.py
S3Data/: RiskIndicator.md  customermetrics.md
compliance_output/: risk_report.txt
